fix: Ajustando cadastro e login